[gd_scene load_steps=9 format=3 uid="uid://v6v1d0gd1u6n"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_iox3i"]
[ext_resource type="Material" uid="uid://cgwodrr3sc7x8" path="res://materials/ball.tres" id="2_tan6e"]
[ext_resource type="AudioStream" uid="uid://bf0lsp0jsfuxr" path="res://sounds/ball_fall.wav" id="3_ofj67"]
[ext_resource type="AudioStream" uid="uid://kkvsk6efws4m" path="res://sounds/ball_launch.wav" id="4_xi8ps"]

[sub_resource type="SphereMesh" id="SphereMesh_aqx0y"]
radius = 0.02
height = 0.04

[sub_resource type="SphereShape3D" id="SphereShape3D_3ayh6"]
radius = 0.02

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q0ik7"]

[sub_resource type="PlaneMesh" id="PlaneMesh_0yt8t"]
size = Vector2(0.1, 0.1)

[node name="Ball" type="CharacterBody3D"]
physics_interpolation_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000556935, -0.1235, 0)
collision_layer = 4
collision_mask = 7
motion_mode = 1
safe_margin = 0.01
script = ExtResource("1_iox3i")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
cast_shadow = 0
mesh = SubResource("SphereMesh_aqx0y")
surface_material_override/0 = ExtResource("2_tan6e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_3ayh6")

[node name="BallFall" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_ofj67")
volume_db = -35.0

[node name="BallLaunch" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_xi8ps")
volume_db = -35.0
pitch_scale = 0.75

[node name="OmniLight3D" type="OmniLight3D" parent="."]
visible = false
light_color = Color(1, 0.656833, 0.29, 1)
light_specular = 0.0
shadow_enabled = true
omni_range = 0.1

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="SlowTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Trail" type="GPUParticles3D" parent="."]
visible = false
process_material = SubResource("ParticleProcessMaterial_q0ik7")
draw_pass_1 = SubResource("PlaneMesh_0yt8t")

[connection signal="timeout" from="SpeedTimer" to="." method="reset_bonus"]
[connection signal="timeout" from="SlowTimer" to="." method="reset_bonus"]
[connection signal="timeout" from="ChargeTimer" to="." method="reset_bonus"]
